Adicionando documentações